--- a/index.html
+++ b/index.html
@@ -102,37 +102,82 @@
             ></button>
           </div>
           <div class="carousel-inner">
-            <div  class="carousel-item position-relative active"data-bs-interval="2000">
-              <img src="images/cover/cover-1.png"class="d-block w-100 overlay" alt="..."/>
-              <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
+            <div
+              class="carousel-item position-relative active"
+              data-bs-interval="2000"
+            >
+              <img
+                src="images/cover/cover-1.png"
+                class="d-block w-100 overlay"
+                alt="..."
+              />
+              <div
+                class="carousel-caption position-absolute top-50 start-50 translate-middle"
+              >
                 <h1 class="h1 fw-semibold">Get Started Digital Learning</h1>
-                <p>Some representative placeholder content for the first slide.</p>
-                <div class="btn btn-primary py-2 px-4 text-white fw-semibold">Get Started</div>
-              </div>
-            </div>
-            <div class="carousel-item position-relative" data-bs-interval="2000">
-              <img src="images/cover/cover-2.png"class="d-block w-100 overlay"alt="..."/>
-              <div class="carousel-caption position-absolute top-50 start-50 translate-middle" >
-                <div> 
-                  <h1 class="h1 fw-semibold">Discover Our Latest Courses</h1>
-                  <p>Some representative placeholder content for the first slide.</p>
-                  <div class="btn btn-primary py-2 px-4 text-white fw-semibold">Get Started</div>
+                <p>
+                  Some representative placeholder content for the first slide.
+                </p>
+                <div class="btn btn-primary py-2 px-4 text-white fw-semibold">
+                  Get Started
                 </div>
               </div>
             </div>
-            <div class="carousel-item position-relative" data-bs-interval="2000">
-              <img src="images/cover/cover-3.png"class="d-block w-100 overlay" alt="..."/>
-              <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
+            <div
+              class="carousel-item position-relative"
+              data-bs-interval="2000"
+            >
+              <img
+                src="images/cover/cover-2.png"
+                class="d-block w-100 overlay"
+                alt="..."
+              />
+              <div
+                class="carousel-caption position-absolute top-50 start-50 translate-middle"
+              >
+                <div>
+                  <h1 class="h1 fw-semibold">Discover Our Latest Courses</h1>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
+                  <div class="btn btn-primary py-2 px-4 text-white fw-semibold">
+                    Get Started
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="carousel-item position-relative"
+              data-bs-interval="2000"
+            >
+              <img
+                src="images/cover/cover-3.png"
+                class="d-block w-100 overlay"
+                alt="..."
+              />
+              <div
+                class="carousel-caption position-absolute top-50 start-50 translate-middle"
+              >
                 <h1 class="h1 fw-semibold">Learn From The Root</h1>
-                <p>Some representative placeholder content for the first slide.</p>
-                <div class="btn btn-primary py-2 px-4 fw-semibold">Get Started</div>
+                <p>
+                  Some representative placeholder content for the first slide.
+                </p>
+                <div class="btn btn-primary py-2 px-4 fw-semibold">
+                  Get Started
+                </div>
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev"type="button"data-bs-target="#carouselExampleDark"data-bs-slide="prev">
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev"
+          >
             <span
               class="carousel-control-prev-icon d-none d-sm-block"
-              aria-hidden="true"></span>
+              aria-hidden="true"
+            ></span>
             <span class="visually-hidden">Previous</span>
           </button>
           <button
@@ -156,9 +201,7 @@
       <!-- Course sections starts -->
       <section class="container" style="margin: 6% auto">
         <div class="text-center course-heading" style="margin-bottom: 5%">
-          <h2 class="h2">
-            Discover Our Popular Courses
-          </h2>
+          <h2 class="h2">Discover Our Popular Courses</h2>
           <p class="text-black">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
@@ -330,15 +373,29 @@
 
       <!-- Company informations starts -->
       <section class="container">
-        <div class="row" style="background-color: #F4FAFD;">
+        <div class="row my-5" style="background-color: #f4fafd">
           <div class="col-12 col-md-6">
-            <img src="images/working.png" alt="" class="img-fluid w-100 h-100">
+            <img
+              src="images/working.png"
+              alt=""
+              class="img-thumbnail img-fluid w-100 h-100"
+            />
           </div>
-          <div class="col-12 col-md-6 ">
-            <div class="h-100 p-4 d-flex flex-column align-items-start justify-content-center">
+          <div class="col-12 col-md-6">
+            <div
+              class="h-100 p-4 d-flex flex-column align-items-start justify-content-center"
+            >
               <h2 class="h2">Explore The elearning Institute</h2>
-              <p class="text-black">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure. <br><br>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
-              <div class="row w-50">
+              <p class="text-black">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable. If you are going to use a passage of Lorem
+                Ipsum, you need to be sure. <br /><br />Anything embarrassing
+                hidden in the middle of text. All the Lorem Ipsum generators on
+                the Internet tend to repeat predefined.
+              </p>
+              <div class="row w-75">
                 <div class="col">
                   <h3 class="h3 fw-bold">3.2K+</h3>
                   <p class="text-muted">Online Course</p>
@@ -359,7 +416,195 @@
       </section>
       <!-- Company informations ends -->
 
+      <!-- Register section starts -->
+      <section class="container">
+        <div class="row bg-primary p-5 my-5 rounded-2 d-flex align-items-center justify-content-center">
+          <div class="col-12 col-md-6">
+            <h2 class="h2 text-white" >Ready to join?</h2>
+            <p class="text-white">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+          <div class="col-12 col-md-6">
+            <!-- Button trigger modal -->
+            <div class="d-flex justify-content-center justify-content-md-end ">
+              <button type ="button"class="btn btn-primary border py-md-3 px-md-5"data-bs-toggle="modal"data-bs-target="#exampleModalCenter">
+              Register Now!
+            </button>
+            </div>
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModalCenter"
+              tabindex="-1"
+              role="dialog"
+              aria-labelledby="exampleModalCenterTitle"
+              aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered modal-fullscreen-md-down" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h2 class="modal-title h2" id="exampleModalLongTitle">
+                      Register Now!
+                    </h2>
+                    <button
+                      type="button"
+                      class="close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="container-fluid">
+                       <form class="needs-validation" novalidate>
+                        <div class="form-row">
+                          <div class="col-md-12 mb-3">
+                            <label for="validationCustom01">First name</label>
+                            <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
+                            <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                          </div>
+                          <div class="col-md-12 mb-3">
+                            <label for="validationCustom02">Last name</label>
+                            <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
+                            <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                          </div>
+                          <div class="col-md-12 mb-3">
+                            <label for="validationCustomUsername">Username</label>
+                            <div class="input-group">
+                              <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupPrepend">@</span>
+                              </div>
+                              <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
+                              <div class="invalid-feedback">
+                                Please choose a username.
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12 mb-3">
+                            <label for="validationCustom03">City</label>
+                            <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
+                            <div class="invalid-feedback">
+                              Please provide a valid city.
+                            </div>
+                          </div>
+                          <div class="col-md-12 mb-3">
+                            <label for="validationCustom04">State</label>
+                            <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
+                            <div class="invalid-feedback">
+                              Please provide a valid state.
+                            </div>
+                          </div>
+                          <div class="col-md-12 mb-3">
+                            <label for="validationCustom05">Zip</label>
+                            <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
+                            <div class="invalid-feedback">
+                              Please provide a valid zip.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                            <label class="form-check-label" for="invalidCheck">
+                              Agree to terms and conditions
+                            </label>
+                            <div class="invalid-feedback">
+                              You must agree before submitting.
+                            </div>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button"class="btn btn-secondary"data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">
+                      Save changes
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Register section ends -->
+
+      <!-- Frequently asked questions starts -->
+      <section class="container">
+        <div class="text-center py-4">
+          <h2 class="h2">Frequently Asked Questions</h2>
+          <p class="text-black">It is a long established fact that a reader will be distracted by <br> the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="row d-flex justify-content-center mt-3 mb-5">
+          <div class="col-12 col-md-10">
+            <div class="accordion border w-75 mx-auto accordion-flush" id="accordionPanelsStayOpenExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header h2 fw-bold" id="panelsStayOpen-headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                    Difference between flexbox and grid in css?
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                  <div class="accordion-body">
+                    The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header h2 fw-bold" id="panelsStayOpen-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                    Bootstrap Vs Tailwind!
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                  <div class="accordion-body">
+                    Bootstrap's utility and layout classes provide you with everything you need to style a responsive webpage. With Tailwind, however, you are much more involved in styling the webpage because you end up having to create your own components using the utility classes that the framework offers.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                    What is a semantic tag?
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                  <div class="accordion-body">
+                    The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header h2 fw-bold" id="panelsStayOpen-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                    What is css box model?
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                  <div class="accordion-body">
+                    A CSS box model is a compartment that includes numerous assets, such as edge, border, padding and material. It is used to develop the design and structure of a web page. It can be used as a set of tools to personalize the layout of different components.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Frequently asked questions ends -->
+
     </main>
+
+
 
     <!-- Bootstrap javascript cdn link -->
     <script
